syntax = "proto3";
package pmx.pipewire.device;

message ListDevice {
  uint32 factory_id = 1;
  uint32 object_serial = 2;
  uint32 client_id = 3;
  string name = 4;
  string description = 5;
  string nick = 6;
  string media_class = 7;
}
